# rag-playground

./: .gcloudignore  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json
.devcontainer/: devcontainer.json
apps/api/: .dockerignore  .env.example  Dockerfile  mypy.ini  package.json  pyproject.toml  render.yaml  requirements-dev.txt  ruff.toml
apps/api/app/: config.py  main.py  middleware.py  schemas.py
apps/api/app/routers/: answer.py  auth.py  compare.py  debug.py  feedback.py  health.py  ingest.py  metrics.py  query.py  query_advanced.py
apps/api/app/services/: advanced.py  chunk.py  compose.py  cors.py  embed.py  extract.py  gcs_ingestion.py  generate.py  graph.py  index.py  observability.py  pipeline.py  reranker.py  retrieve.py  runtime_config.py  session.py  session_auth.py  telemetry.py  tokenizer.py  traces.py
apps/api/scripts/: postinstall.mjs  run.py  setup_venv.py
apps/api/tests/: test_advanced_graph.py  test_answer_format_examples.py  test_answer_modes.py  test_auth_google.py  test_chunker.py  test_citation_monotonic.py  test_compare_endpoint.py  test_compose_prompt_shapes.py  test_cors_config.py  test_debug_endpoints.py  test_eval_qa.py  test_gcs_ingestion_config.py  test_health.py  test_ingest_gcs_backend.py  test_metrics_summary.py  test_query_errors.py  test_rerank_env.py  test_runtime_config.py  test_session_cookie.py  test_whitespace_postprocess.py
apps/api/tests/data/: dell_excerpt.txt  qa_dell.json  qa_policy.json
docs/: auth-workflow-survey.md  (+1 more)
tools/: dev_local.sh  (+4 more)
(+69 files in other folders)
