[tool.poetry]
name = "rag-playground-api"
version = "0.1.0"
description = "RAG Playground API"
authors = ["You <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.12.0"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
faiss-cpu = "^1.8.0.post1"
numpy = "^1.26.4"
tiktoken = "^0.7.0"
pymupdf = "^1.24.9"
python-multipart = "^0.0.9"
openai = "^1.52.0"
PyPDF2 = "^3.0.1"
rank-bm25 = "^0.2.2"
sentence-transformers = "^5.1.2"
google-auth = "^2.29"
google-cloud-firestore = "^2.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.8"
ruff = "^0.6.9"
black = "^24.8.0"
